--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="bg-secondary-subtle text-light p-1 pt-4">
+    <div class="container text-center text-muted">
+      <p>&copy; TP Back End y Front End - 2023 Grupo 7 | Todos los derechos reservados.</p>
+    </div>
+  </footer>
