--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.0/flatly/bootstrap.min.css" integrity="sha512-N/JRw8RFoUkWgQIpunoKtmZShzrHbs724xV4DMh+LSNjebmrgNy2dzAIUhoOqSazEZ/bLlulWy2muCxletfrsA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+  <app-navbar></app-navbar>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </body>
 </html>
