--- a/frontend/src/app/components/addeditproduct/addeditproduct.component.html
+++ b/frontend/src/app/components/addeditproduct/addeditproduct.component.html
@@ -1,27 +1,19 @@
 <div class="container">
-    <div class="flex">
-        <h2>Agregar o modificar productos</h2>
-    </div>
-</div>
+    <h2>Agregar producto</h2>
+    <form (ngSubmit)="agregarProducto()" [formGroup]="productoForm">
 
-<div class="container">
-    <form action="" id="agregarProducto">
-
-    </form>
-</div>
-
-
-<div class="container">
-    <form id="productoForm">
-        Nombre<input type="text" id="formNombre" class="form-control" placeholder="Ingrese el nombre del producto">
-        Descripción<input type="text" id="formDescripcion" class="form-control"
+        Nombre<input type="text" formControlName="name" class="form-control"
+            placeholder="Ingrese el nombre del producto">
+        Descripción<input type="text" formControlName="description" class="form-control"
             placeholder="Haga una descripción del producto">
-        Precio<input type="text" id="formPrecio" class="form-control" placeholder="Ingrese el precio del producto">
-        Stock<input type="text" id="formStock" class="form-control" placeholder="Ingrese la cantidad disponible">
-        <div class="flexito">
-            <button type="submit" class="btn btn-primary btn-sm separador">Agregar</button>
-            <button type="volver" class="btn btn-primary btn-sm separador" routerLink="/">Volver</button>
-        </div>
+        Precio<input type="number" formControlName="price" class="form-control"
+            placeholder="Ingrese el precio del producto">
+        Stock<input type="number" formControlName="stock" class="form-control"
+            placeholder="Ingrese la cantidad disponible">
+            <div class="flexito">
+                <button type="submit" class="btn btn-primary btn-sm separador">Agregar</button>
+                <button type="button" class="btn btn-primary btn-sm separador" routerLink="/">Volver</button>
+            </div>
     </form>
-
+   
 </div>
