--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -1,1 +1,17 @@
-<h2>Acá tenemos que hacer un flexbox con nosotros cuatro</h2>
+<section class="container">
+    <h2>¿Quiénes somos?</h2>
+    <p>¡Hola! Somos el <b>Grupo 7</b>. Estos datos los estamos tomando de un array de objetos que se exportan del <b>about.component.ts.</b></p>
+    <div id="about">
+    <div class="card bg-light mb-3" style="max-width: 20rem;" *ngFor="let persona of nosotros let i = index">
+        <div class="card-header">Integrante {{i+1}}</div>        
+        <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Imagen de" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 218 180" style="font-size:1.125rem;text-anchor:middle">
+            <rect width="100%" height="100%" fill="#868e96"></rect>
+            <image [attr.xlink:href]="persona.image" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
+          </svg>
+        <div class="card-body">
+          <h4 class="card-title">{{persona.name}} {{persona.lastname}}</h4>
+        <p class="card-text">{{persona.description}}</p>
+        </div>
+      </div>
+    </div>
+</section>
