Agregado "Volver" en about us

--- a/frontend/src/app/components/about/about.component.css
+++ b/frontend/src/app/components/about/about.component.css
@@ -9,3 +9,9 @@
     margin-top:30px;
     text-align: center;
 }
+
+.flexito {
+    display: flex;
+    justify-content: right;
+    margin-top: 15px;
+  }
