--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -12,6 +12,10 @@
           <h4 class="card-title">{{persona.name}} {{persona.lastname}}</h4>
         <p class="card-text">{{persona.description}}</p>
         </div>
+
       </div>
     </div>
+    <div class="flexito">
+      <button type="button" class="btn btn-primary btn-sm separador" routerLink="/">Volver</button>
+  </div>
 </section>
